# Teste_Analytics_AndreLopes

./: pyproject.toml  readme.md
data/: database.db
data/processed/: data_clean.csv
doc/: consultas_sql.sql  explicacaoes.md  query_pt2.sql  relatorio_insights.md
notebook/: EDA.ipynb  query.sql
scr/: generate_dataset.py
