[tool.poetry]
name = "teste-analytics-andrelopes"
version = "0.1.0"
description = "Teste para estágio de Analytics da QUOD"
authors = ["datalopes1 <datalopes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
Faker = "^33.0.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
tqdm = "^4.67.0"
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
